--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,12 @@ jobs:
 
     - name: Login to DockerHub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
+    - name: Save current Unix timestamp
+      id: timestamp
+      run: echo "::set-output name=timestamp::$(date +%s)"
+    
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/pymessagerabbitmq:$(date +%s)
-
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/pymessagerabbitmq:${{ steps.timestamp.outputs.timestamp }}
+    
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/pymessagerabbitmq:$(date +%s)
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/pymessagerabbitmq:${{ steps.timestamp.outputs.timestamp }}
